# band-of-agents

./: .gitignore  IRIS_agent3_absences.py  absence_loader.py  absence_tracker.py  absences.csv  access_control.py  agent1_onboarding.py  agent2_security.py  agent3_absence.py  agent4_benefits.py  agent5_payroll_calc.py  agent6_report.py  anonymizer.py  audit_log.csv  authorize.py  benefits.py  benefits_calculator.py  data_loader.py  deduction_ai.py  employee_dataset.csv  lookup.py  onboarding_helper.py  payroll_reporter.py  privacy_gateway1.py  pyproject.toml  security_guard.py  security_monitor.py  users.py
